@@ -1,6 +1,9 @@
 Release 0.6.3 (in development)
 ==============================
 
+* #206: Refuse to overwrite an existing master document in
+  sphinx-quickstart.
+
 * #208: Use MS-sanctioned locale settings, determined by the
   ``language`` config option, in the HTML help builder.
 
